# VelvetSlim

./: .gitignore  CMakeLists.txt  README.md  perf.data  perf.data.old
src/: Velvet.cpp  Velvet.h  forward.h  main.cpp
src/data/: Model.h  Pixel.h  Vec2.h  Vec2Int.h  Vec3.h  Vec4Int.h
src/draw/: ColorUtils.h  Pixel.h  RenderPool.cpp  RenderPool.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  RendererClip.cpp  RendererImage.cpp  RendererPrimitive.cpp  ThreadCtx.h
src/experimental/: fastDraw.h  fastSSERand.h  fastVU.h
src/logger/: Logger.h  nlogger.h
src/object/: Object.cpp  Object.h
src/parser/: WaveModel.cpp  WaveModel.h
src/resource/: Image.h  ImageTexture.h  Music.h  Resource.h  ResourceManager.h  StaticLoader.h
src/state/: State.cpp  State.h
